--- a/index.html
+++ b/index.html
@@ -26,12 +26,40 @@
         <p>Stay connected to get upcoming jobs</p>
       </div>
       <div class="main__title">
-        <h1>Find the most exciting jobs in tech</h1>
+        <h2>Find the most<br>exciting jobs in tech</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi rhoncus, pharetra leo et. Sign in or sign up to get started!</p>
       </div>
       <div class="main__search">
-        <div class="main__search_input"></div>
+        <div class="main__search_icon">
+          <div class="main__search_svg"><svg width="22" height="21" xmlns="http://www.w3.org/2000/svg">
+<path d="m16.84 14.645 4.284 4.282-1.415 1.415-4.282-4.283a8.96 8.96 0 0 1-5.617 1.97c-4.968 0-9-4.033-9-9 0-4.969 4.032-9 9-9s9 4.031 9 9a8.96 8.96 0 0 1-1.97 5.616Zm-2.005-.742a6.977 6.977 0 0 0 1.975-4.875c0-3.868-3.133-7-7-7-3.868 0-7 3.132-7 7 0 3.867 3.132 7 7 7a6.977 6.977 0 0 0 4.875-1.975l.15-.15Z"/>
+</svg>
+          </div>
+          <input class="main__input_search" type="text" placeholder="Search...">
+          <button class="main__btn_search">Search</button>
+        </div>
+        <div class="main__search_building"><img src="img/building.jpg"></div>
       </div>
+      <ul class="main__company-list">
+        <li class="main__company-list_item"><img src="../img/label_1.svg"></li>
+        <li class="main__company-list_item"><img src="../img/label_2.svg"></li>
+        <li class="main__company-list_item"><img src="../img/label_3.svg"></li>
+        <li class="main__company-list_item"><img src="../img/label_4.svg"></li>
+        <li class="main__company-list_item"><img src="../img/label_5.svg"></li>
+        <li class="main__company-list_item"><img src="../img/label_6.svg"></li>
+      </ul>
     </main>
+    <section class="jo container">
+      <div class="jo__title">
+        <h3>Explore the latest job openings</h3>
+        <div class="jo__title_info">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi rhoncus,<br>pharetra leo et, efficitur tortor. Fusce vel convallis magna.</p>
+          <button class="jo__title_btn">See All Jobs</button>
+        </div>
+      </div>
+      <div class="jo__cards">
+        <var>cards = [{}]</var>
+      </div>
+    </section>
   </body>
 </html>
