--- a/index.html
+++ b/index.html
@@ -49,16 +49,125 @@
         <li class="main__company-list_item"><img src="../img/label_6.svg"></li>
       </ul>
     </main>
-    <section class="jo container">
-      <div class="jo__title">
-        <h3>Explore the latest job openings</h3>
-        <div class="jo__title_info">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi rhoncus,<br>pharetra leo et, efficitur tortor. Fusce vel convallis magna.</p>
-          <button class="jo__title_btn">See All Jobs</button>
+    <section class="jo">
+      <div class="container">
+        <div class="jo__title">
+          <h3>Explore the latest job openings</h3>
+          <div class="jo__title_info">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi rhoncus,<br>pharetra  leo et, efficitur tortor. Fusce vel convallis magna.</p>
+            <button class="jo__title_btn">See All Jobs</button>
+          </div>
         </div>
-      </div>
-      <div class="jo__cards">
-        <var>cards = [{}]</var>
+        <div class="jo__cards">
+          <div class="jo__card">
+            <div class="jo__card_info">
+              <div class="jo__card_logo"><img src="img/dribble.svg"></div>
+              <div class="jo__card_name">
+                <p>Dribble</p><span>October 25, 2022</span>
+              </div>
+            </div>
+            <h6 class="jo__card_spec">Front End Developer</h6>
+            <div class="jo__card_tags">
+              <p>Marketing</p><span>Part Time</span>
+            </div>
+            <div class="jo__card_location">
+              <p>San Antonio</p>
+            </div>
+            <div class="jo__card_money">
+              <p>$130k-160k</p>
+            </div>
+          </div>
+          <div class="jo__card">
+            <div class="jo__card_info">
+              <div class="jo__card_logo"><img src="img/dribble.svg"></div>
+              <div class="jo__card_name">
+                <p>Dribble</p><span>October 25, 2022</span>
+              </div>
+            </div>
+            <h6 class="jo__card_spec">Backend Developer</h6>
+            <div class="jo__card_tags">
+              <p>Design</p><span>Full Time</span>
+            </div>
+            <div class="jo__card_location">
+              <p>Dallas</p>
+            </div>
+            <div class="jo__card_money">
+              <p>$50k-70k</p>
+            </div>
+          </div>
+          <div class="jo__card">
+            <div class="jo__card_info">
+              <div class="jo__card_logo"><img src="img/tokopedia.svg"></div>
+              <div class="jo__card_name">
+                <p>Tokopedia</p><span>March 30, 2021</span>
+              </div>
+            </div>
+            <h6 class="jo__card_spec">Scrum Master</h6>
+            <div class="jo__card_tags">
+              <p>Marketing</p><span>Part Time</span>
+            </div>
+            <div class="jo__card_location">
+              <p>San Antonio</p>
+            </div>
+            <div class="jo__card_money">
+              <p>$130k-160k</p>
+            </div>
+          </div>
+          <div class="jo__card">
+            <div class="jo__card_info">
+              <div class="jo__card_logo"><img src="img/facebook.svg"></div>
+              <div class="jo__card_name">
+                <p>Facebook</p><span>March 30, 2021</span>
+              </div>
+            </div>
+            <h6 class="jo__card_spec">Lead Technical Architect</h6>
+            <div class="jo__card_tags">
+              <p>Technology</p><span>Full Time</span>
+            </div>
+            <div class="jo__card_location">
+              <p>Melbourne</p>
+            </div>
+            <div class="jo__card_money">
+              <p>$210k-240k</p>
+            </div>
+          </div>
+          <div class="jo__card">
+            <div class="jo__card_info">
+              <div class="jo__card_logo"><img src="img/spotify.svg"></div>
+              <div class="jo__card_name">
+                <p>Spotify</p><span>March 30, 2021</span>
+              </div>
+            </div>
+            <h6 class="jo__card_spec">Digital Media Strategist</h6>
+            <div class="jo__card_tags">
+              <p>Business</p><span>Casual</span>
+            </div>
+            <div class="jo__card_location">
+              <p>New York</p>
+            </div>
+            <div class="jo__card_money">
+              <p>$50k-70k</p>
+            </div>
+          </div>
+          <div class="jo__card">
+            <div class="jo__card_info">
+              <div class="jo__card_logo"><img src="img/paypal.svg"></div>
+              <div class="jo__card_name">
+                <p>Paypal</p><span>March 30, 2021</span>
+              </div>
+            </div>
+            <h6 class="jo__card_spec">Systems Administrator</h6>
+            <div class="jo__card_tags">
+              <p>Business</p><span>Casual</span>
+            </div>
+            <div class="jo__card_location">
+              <p>California</p>
+            </div>
+            <div class="jo__card_money">
+              <p>$40k-50k</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
