--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
         </div>
       </div>
     </section>
-    <section class="work">
-      <div class="work__title container">
+    <section class="work container">
+      <div class="work__title">
         <div class="work__title_info">
           <h3>Work with exciting companies</h3>
           <p>Discover more than 1,600 open positions</p>
         </div>
         <div class="work__title_slide-btn">
-          <button class="work__btn_left"><svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/00/svg"><path d="M4.63769 7.58858L10.0017 2.22455L8.58769 0.810547L0.809692 8.58858L8.58769 16.3666L10.17 14.9526L4.63769 9.58858H16.8097V7.58858H4.63769Z" fill="#D6D7E0" /></svg></button>
-          <button class="work__btn_right"><svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.g/2000/svg"><path d="M12.9817 7.58858L7.61769 2.22455L9.03169 0.810547L16.8097 8.58858L9.03169 16.3666L7.769 14.9526L12.9817 9.58858H0.809692V7.58858H12.9817Z" fill="#030407" /></svg></button>
+          <button class="work__btn_left"></button>
+          <button class="work__btn_right"></button>
         </div>
       </div>
       <div class="work__slider">
@@ -223,6 +223,123 @@
           </div>
           <p class="work__slider_card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dui mollis metus gravida tristique.</p>
           <p class="work__slider_card-emp">400 Employees</p>
+        </div>
+      </div>
+      <div class="work__person">
+        <div class="work__person_img"><img src="img/man_its_ok.jpg">
+          <p>Partnership with Glassdoor and LinkedIn</p>
+        </div>
+        <div class="work__person_info">
+          <h3>Build a custom membership site with locked content.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi rhoncus, pharetra leo et, efficitur tortor. Fusce vel convallis magna, sit amet pulvinar diam. Sed laoreet feugiat consequat.</p>
+          <div class="work__person_list">
+            <div class="work__person_item">
+              <div class="work__person_item-icon"><img src="img/two_user.svg"></div>
+              <div class="work__person_item-desc">
+                <p>Add a feature point here</p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
+              </div>
+            </div>
+            <div class="work__person_item">
+              <div class="work__person_item-icon"><img src="img/two_user.svg"></div>
+              <div class="work__person_item-desc">
+                <p>Add a feature point here</p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
+              </div>
+            </div>
+            <div class="work__person_item">
+              <div class="work__person_item-icon"><img src="img/two_user.svg"></div>
+              <div class="work__person_item-desc">
+                <p>Add a feature point here</p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="users">
+      <div class="container2">
+        <h3>See what users say about<br>our job platform</h3>
+        <div class="users__slider">
+          <div class="users__info">
+            <div class="users__info_desc">
+              <h5>“Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit. Sed a mi<br>rhoncus, pharetra leo et, efficitur tortor.<br>Fusce vel convallis magna”</h5>
+              <p>David Sinclair - Senior Frontend Developer</p>
+            </div>
+            <div class="user__info_btn">
+              <button class="users__btn_left"></button>
+              <button class="users__btn_right"></button>
+            </div>
+          </div>
+          <div class="users__slider_img"><img src="img/senior.jpg"></div>
+        </div>
+      </div>
+    </section>
+    <section class="news">
+      <div class="container">
+        <div class="news__title">
+          <h3>Get the latest news about jobs!</h3>
+          <div class="news__title_btn">
+            <button class="news__btn_left"></button>
+            <button class="news__btn_right"></button>
+          </div>
+        </div>
+        <div class="news__slider">
+          <div class="news__slider_item">
+            <div class="news__slider_item-img"><img src="img/slider_1.jpg"></div>
+            <div class="news__slider_item-info"><small>Resources</small>
+              <h5>Finding employees in the gig economy</h5>
+              <p>October 24, 2022</p>
+            </div>
+            <div class="news__slider_item-btn">
+              <button>Read More <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.48668 5.75378L5.38918 1.65631L6.46928 0.576172L12.4108 6.51768L6.46928 12.4592L5.38918 11.3791L9.48668 7.28158H0.188599V5.75378H9.48668Z" fill="#24262D" /></svg></button>
+            </div>
+          </div>
+          <div class="news__slider_item">
+            <div class="news__slider_item-img"><img src="img/slider_2.jpg"></div>
+            <div class="news__slider_item-info"><small>Education</small>
+              <h5>How to make a great first impression everytime</h5>
+              <p>October 24, 2022</p>
+            </div>
+            <div class="news__slider_item-btn">
+              <button>Read More <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.48668 5.75378L5.38918 1.65631L6.46928 0.576172L12.4108 6.51768L6.46928 12.4592L5.38918 11.3791L9.48668 7.28158H0.188599V5.75378H9.48668Z" fill="#24262D" /></svg></button>
+            </div>
+          </div>
+          <div class="news__slider_item">
+            <div class="news__slider_item-img"><img src="img/slider_3.jpg"></div>
+            <div class="news__slider_item-info"><small>Trends</small>
+              <h5>Find out the best paying careers in 2022</h5>
+              <p>October 24, 2022</p>
+            </div>
+            <div class="news__slider_item-btn">
+              <button>Read More <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.48668 5.75378L5.38918 1.65631L6.46928 0.576172L12.4108 6.51768L6.46928 12.4592L5.38918 11.3791L9.48668 7.28158H0.188599V5.75378H9.48668Z" fill="#24262D" /></svg></button>
+            </div>
+          </div>
+          <div class="news__slider_item">
+            <div class="news__slider_item-img"><img src="img/slider_4.jpg"></div>
+            <div class="news__slider_item-info"><small>Careers</small>
+              <h5>Ten things to nail your next job Interview</h5>
+              <p>March 24, 2021</p>
+            </div>
+            <div class="news__slider_item-btn">
+              <button>Read More <svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.48668 5.75378L5.38918 1.65631L6.46928 0.576172L12.4108 6.51768L6.46928 12.4592L5.38918 11.3791L9.48668 7.28158H0.188599V5.75378H9.48668Z" fill="#24262D" /></svg></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="explore container">
+      <div class="explore__info">
+        <h4>Explore a job now!</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris rhoncus pharetra cursus. Suspendisse sodales porta leo, ac placerat ex pretium quis.</p>
+        <div class="explore__info_logo"><img src="img/search_color.png"></div>
+      </div>
+      <div class="explore__search">
+        <div class="explore__search_icon">
+          <div class="explore__search_svg"><svg width="22" height="21" xmlns="http://www.w3.org/2000/svg">
+<path d="m16.84 14.645 4.284 4.282-1.415 1.415-4.282-4.283a8.96 8.96 0 0 1-5.617 1.97c-4.968 0-9-4.033-9-9 0-4.969 4.032-9 9-9s9 4.031 9 9a8.96 8.96 0 0 1-1.97 5.616Zm-2.005-.742a6.977 6.977 0 0 0 1.975-4.875c0-3.868-3.133-7-7-7-3.868 0-7 3.132-7 7 0 3.867 3.132 7 7 7a6.977 6.977 0 0 0 4.875-1.975l.15-.15Z"/>
+</svg>
+          </div>
+          <input class="explore__input_search" type="text" placeholder="Search...">
+          <button class="explore__btn_search">Search</button>
         </div>
       </div>
     </section>
