--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F5 test task</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body class="body">
     <header class="header container"><a href="#"><img class="logo" src="../img/logo.png" alt="logo"></a>
@@ -190,38 +193,48 @@
           <button class="work__btn_right"></button>
         </div>
       </div>
-      <div class="work__slider">
-        <div class="work__slider_card">
-          <div class="work__slider_card-logo">
-            <div class="work__slider_img"><img src="img/dribble.svg"></div>
-            <h6>Dribble</h6>
+      <div class="work__slider swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="work__slider_card">
+              <div class="work__slider_card-logo">
+                <div class="work__slider_img"><img src="img/dribble.svg"></div>
+                <h6>Dribble</h6>
+              </div>
+              <p class="work__slider_card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dui mollis metus gravida tristique.</p>
+              <p class="work__slider_card-emp">65 Employees</p>
+            </div>
           </div>
-          <p class="work__slider_card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dui mollis metus gravida tristique.</p>
-          <p class="work__slider_card-emp">65 Employees</p>
-        </div>
-        <div class="work__slider_card">
-          <div class="work__slider_card-logo">
-            <div class="work__slider_img"><img src="img/paypal.svg"></div>
-            <h6>Paypal</h6>
+          <div class="swiper-slide">
+            <div class="work__slider_card">
+              <div class="work__slider_card-logo">
+                <div class="work__slider_img"><img src="img/paypal.svg"></div>
+                <h6>Paypal</h6>
+              </div>
+              <p class="work__slider_card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dui mollis metus gravida tristique.</p>
+              <p class="work__slider_card-emp">6000 Employees</p>
+            </div>
           </div>
-          <p class="work__slider_card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dui mollis metus gravida tristique.</p>
-          <p class="work__slider_card-emp">6000 Employees</p>
-        </div>
-        <div class="work__slider_card">
-          <div class="work__slider_card-logo">
-            <div class="work__slider_img"><img src="img/spotify.svg"></div>
-            <h6>Spotify</h6>
+          <div class="swiper-slide">
+            <div class="work__slider_card">
+              <div class="work__slider_card-logo">
+                <div class="work__slider_img"><img src="img/spotify.svg"></div>
+                <h6>Spotify</h6>
+              </div>
+              <p class="work__slider_card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dui mollis metus gravida tristique.</p>
+              <p class="work__slider_card-emp">2000 Employees</p>
+            </div>
           </div>
-          <p class="work__slider_card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dui mollis metus gravida tristique.</p>
-          <p class="work__slider_card-emp">2000 Employees</p>
-        </div>
-        <div class="work__slider_card">
-          <div class="work__slider_card-logo">
-            <div class="work__slider_img"><img src="img/slack.svg"></div>
-            <h6>Slack</h6>
+          <div class="swiper-slide">
+            <div class="work__slider_card">
+              <div class="work__slider_card-logo">
+                <div class="work__slider_img"><img src="img/slack.svg"></div>
+                <h6>Slack</h6>
+              </div>
+              <p class="work__slider_card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dui mollis metus gravida tristique.</p>
+              <p class="work__slider_card-emp">400 Employees</p>
+            </div>
           </div>
-          <p class="work__slider_card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at dui mollis metus gravida tristique.</p>
-          <p class="work__slider_card-emp">400 Employees</p>
         </div>
       </div>
       <div class="work__person">
